--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -33,10 +33,10 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][SceneViewer]
-Pos=373,58
-Size=800,656
+Pos=360,58
+Size=875,651
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000011,0
 
 [Window][ObjectViewer]
 Pos=1175,58
@@ -46,33 +46,60 @@ DockId=0x00000003,0
 
 [Window][SceneObjects]
 Pos=1,58
-Size=370,656
+Size=370,651
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Save]
-ViewportPos=1961,462
-ViewportId=0xF55495E0
-Size=800,321
+Pos=432,196
+Size=783,291
 Collapsed=0
-DockId=0x0000000C,0
 
 [Window][Load]
 Pos=850,314
 Size=306,281
 Collapsed=0
 
+[Window][Object Viewer]
+Pos=1237,58
+Size=370,651
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Project Directory]
+Pos=1,711
+Size=1606,223
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Scene Content]
+Pos=1,58
+Size=357,651
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][Scene Viewer]
+Pos=360,58
+Size=875,651
+Collapsed=0
+DockId=0x00000011,0
+
 [Docking][Data]
-DockNode            ID=0x0000000C Pos=1961,462 Size=800,321 HiddenTabBar=1 Selected=0xB761A2B8
-DockSpace           ID=0xCDC34B94 Window=0x41896AB8 Pos=157,113 Size=1606,876 Split=Y
-  DockNode          ID=0x0000000A Parent=0xCDC34B94 SizeRef=1606,656 Split=X
-    DockNode        ID=0x00000008 Parent=0x0000000A SizeRef=370,876 Selected=0xEF0AF39E
-    DockNode        ID=0x00000009 Parent=0x0000000A SizeRef=1234,876 Split=X
-      DockNode      ID=0x00000001 Parent=0x00000009 SizeRef=800,876 Split=Y
-        DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1606,468 Split=Y
-          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1606,580 CentralNode=1 Selected=0xCD10BFF7
-          DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1606,294 Selected=0x9B88CA06
-        DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1606,406 Selected=0x1298F26D
-      DockNode      ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
-  DockNode          ID=0x0000000B Parent=0xCDC34B94 SizeRef=1606,218 Selected=0xB146F3E7
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=57,199 Size=1606,876 Split=Y
+  DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,651 Split=X
+    DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=874,876 Split=Y
+      DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
+        DockNode          ID=0x00000008 Parent=0x0000000A SizeRef=370,876 Selected=0xEF0AF39E
+        DockNode          ID=0x00000009 Parent=0x0000000A SizeRef=1234,876 Split=X
+          DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=800,876 Split=Y
+            DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1606,468 Split=Y
+              DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1606,580 Split=X Selected=0xCD10BFF7
+                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=357,651 Selected=0x61A48ADD
+                DockNode  ID=0x00000011 Parent=0x00000002 SizeRef=875,651 CentralNode=1 Selected=0x12C8CFB4
+              DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1606,294 Selected=0x9B88CA06
+            DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=1606,406 Selected=0x1298F26D
+          DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
+      DockNode            ID=0x0000000B Parent=0x00000007 SizeRef=1606,218 Selected=0xB146F3E7
+    DockNode              ID=0x0000000C Parent=0x0000000D SizeRef=370,876 Selected=0x55CB218D
+  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,223 Selected=0x8339927A
 
