--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1932,1025
+Size=1612,951
 Collapsed=0
 
 [Window][Debug##Default]
@@ -36,7 +36,7 @@ DockId=0x0000000B,0
 Pos=360,58
 Size=875,651
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000010,0
 
 [Window][ObjectViewer]
 Pos=1175,58
@@ -61,31 +61,31 @@ Size=306,281
 Collapsed=0
 
 [Window][Object Viewer]
-Pos=1556,58
-Size=370,659
+Pos=1241,58
+Size=370,590
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Project Directory]
-Pos=6,719
-Size=1920,300
+Pos=1,650
+Size=1610,300
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Scene Content]
-Pos=6,58
-Size=388,659
+Pos=1,58
+Size=386,590
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][Scene Viewer]
+Pos=389,58
+Size=850,590
 Collapsed=0
 DockId=0x00000010,0
 
-[Window][Scene Viewer]
-Pos=396,58
-Size=1158,659
-Collapsed=0
-DockId=0x00000011,0
-
 [Docking][Data]
-DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=0,47 Size=1920,961 Split=Y
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=120,172 Size=1610,892 Split=Y
   DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,126 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1238,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
@@ -93,9 +93,9 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=0,47 Size=1920,961
         DockNode          ID=0x00000009 Parent=0x0000000A SizeRef=1234,876 Split=X
           DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=800,876 Split=Y
             DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1606,468 Split=Y
-              DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1606,580 Split=X Selected=0xCD10BFF7
-                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=388,651 Selected=0x61A48ADD
-                DockNode  ID=0x00000011 Parent=0x00000002 SizeRef=848,651 CentralNode=1 Selected=0x12C8CFB4
+              DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1606,580 Split=X Selected=0x12C8CFB4
+                DockNode  ID=0x0000000F Parent=0x00000002 SizeRef=386,590 Selected=0x61A48ADD
+                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=850,590 CentralNode=1 Selected=0x12C8CFB4
               DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1606,294 Selected=0x9B88CA06
             DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=1606,406 Selected=0x1298F26D
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
