kept working on editor
removed anneccary files
added a delete button
and started the porject opener still has issues with creating a new project

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -1,10 +1,10 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1608,935
+Size=1288,755
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=577,322
 Size=400,400
 Collapsed=0
 
@@ -61,31 +61,42 @@ Size=306,281
 Collapsed=0
 
 [Window][Object Viewer]
-Pos=1189,58
-Size=418,576
+Pos=869,58
+Size=418,396
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Project Directory]
-Pos=1,636
-Size=1606,298
+Pos=1,456
+Size=1286,298
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Scene Content]
 Pos=1,58
-Size=368,576
+Size=368,396
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Scene Viewer]
 Pos=371,58
-Size=816,576
+Size=496,396
 Collapsed=0
 DockId=0x00000010,0
 
+[Window][Select Project]
+Pos=1,58
+Size=1606,876
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][Create New Project]
+Pos=892,310
+Size=400,160
+Collapsed=0
+
 [Docking][Data]
-DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=135,188 Size=1606,876 Split=Y
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,696 Split=Y
   DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,576 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1190,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
