done with custom classes

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -51,7 +51,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Save]
-Pos=387,209
+ViewportPos=2144,528
+ViewportId=0xF55495E0
 Size=644,340
 Collapsed=0
 
@@ -91,7 +92,7 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Create New Project]
-Pos=1075,418
+Pos=956,334
 Size=400,160
 Collapsed=0
 
@@ -103,6 +104,11 @@ Collapsed=0
 [Window][Create New Class]
 Pos=426,303
 Size=340,148
+Collapsed=0
+
+[Window][Create New Instance]
+Pos=597,335
+Size=94,84
 Collapsed=0
 
 [Docking][Data]
