done with input

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -92,7 +92,7 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Create New Project]
-Pos=956,334
+Pos=647,385
 Size=400,160
 Collapsed=0
 
@@ -111,6 +111,12 @@ Pos=597,335
 Size=94,84
 Collapsed=0
 
+[Window][Input Manager]
+Pos=1,456
+Size=1286,298
+Collapsed=0
+DockId=0x0000000E,1
+
 [Docking][Data]
 DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,696 Split=Y
   DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,576 Split=X
@@ -128,5 +134,5 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
       DockNode            ID=0x0000000B Parent=0x00000007 SizeRef=1606,218 Selected=0xB146F3E7
     DockNode              ID=0x0000000C Parent=0x0000000D SizeRef=418,876 Selected=0x55CB218D
-  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x8339927A
+  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x7091E70A
 
