added scroll and drag to scene viewer

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -118,7 +118,7 @@ Collapsed=0
 DockId=0x0000000E,1
 
 [Docking][Data]
-DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=227,211 Size=1286,696 Split=Y
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,696 Split=Y
   DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,576 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1190,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
@@ -134,5 +134,5 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=227,211 Size=1286,
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
       DockNode            ID=0x0000000B Parent=0x00000007 SizeRef=1606,218 Selected=0xB146F3E7
     DockNode              ID=0x0000000C Parent=0x0000000D SizeRef=418,876 Selected=0x55CB218D
-  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x7091E70A
+  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x8339927A
 
