fixed template porject

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -1,11 +1,10 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=397,351
+Size=1288,755
 Collapsed=0
 
 [Window][Debug##Default]
-ViewportPos=407,238
-ViewportId=0x9F5F46A1
+Pos=221,97
 Size=400,400
 Collapsed=0
 
@@ -88,12 +87,12 @@ DockId=0x00000010,0
 
 [Window][Select Project]
 Pos=1,58
-Size=395,292
+Size=1606,876
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Create New Project]
-Pos=710,422
+Pos=840,430
 Size=400,160
 Collapsed=0
 
@@ -119,7 +118,7 @@ Collapsed=0
 DockId=0x0000000E,1
 
 [Docking][Data]
-DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=611,376 Size=395,292 Split=Y
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,696 Split=Y
   DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,576 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1190,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
@@ -129,11 +128,11 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=611,376 Size=395,2
             DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1606,468 Split=Y
               DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1606,580 Split=X Selected=0x12C8CFB4
                 DockNode  ID=0x0000000F Parent=0x00000002 SizeRef=368,576 Selected=0x61A48ADD
-                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=816,576 CentralNode=1 Selected=0x582FBD90
+                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=816,576 CentralNode=1 Selected=0x12C8CFB4
               DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1606,294 Selected=0x9B88CA06
             DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=1606,406 Selected=0x1298F26D
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
       DockNode            ID=0x0000000B Parent=0x00000007 SizeRef=1606,218 Selected=0xB146F3E7
     DockNode              ID=0x0000000C Parent=0x0000000D SizeRef=418,876 Selected=0x55CB218D
-  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x8339927A
+  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x7091E70A
 
