--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1928,1044
+Size=1288,755
 Collapsed=0
 
 [Window][Debug##Default]
@@ -51,7 +51,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Save]
-Pos=743,575
+ViewportPos=1059,724
+ViewportId=0xF55495E0
 Size=644,340
 Collapsed=0
 
@@ -61,26 +62,26 @@ Size=306,281
 Collapsed=0
 
 [Window][Object Viewer]
-Pos=1504,58
-Size=418,680
+Pos=869,58
+Size=418,396
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Project Directory]
-Pos=6,740
-Size=1916,298
+Pos=1,456
+Size=1286,298
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Scene Content]
-Pos=6,58
-Size=366,680
+Pos=1,58
+Size=366,396
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Scene Viewer]
-Pos=374,58
-Size=1128,680
+Pos=369,58
+Size=498,396
 Collapsed=0
 DockId=0x00000010,0
 
@@ -111,13 +112,13 @@ Size=94,84
 Collapsed=0
 
 [Window][Input Manager]
-Pos=6,740
-Size=1916,298
+Pos=1,456
+Size=1286,298
 Collapsed=0
 DockId=0x0000000E,1
 
 [Docking][Data]
-DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=2,50 Size=1916,980 Split=Y
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,696 Split=Y
   DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,396 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1190,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
