fixed run and tpye issues

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1928,1044
+Size=1288,755
 Collapsed=0
 
 [Window][Debug##Default]
@@ -62,26 +62,26 @@ Size=306,281
 Collapsed=0
 
 [Window][Object Viewer]
-Pos=1504,58
-Size=418,680
+Pos=869,58
+Size=418,396
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Project Directory]
-Pos=6,740
-Size=1916,298
+Pos=1,456
+Size=1286,298
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Scene Content]
-Pos=6,58
-Size=366,680
+Pos=1,58
+Size=366,396
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Scene Viewer]
-Pos=374,58
-Size=1128,680
+Pos=369,58
+Size=498,396
 Collapsed=0
 DockId=0x00000010,0
 
@@ -112,13 +112,13 @@ Size=94,84
 Collapsed=0
 
 [Window][Input Manager]
-Pos=6,740
-Size=1916,298
+Pos=1,456
+Size=1286,298
 Collapsed=0
 DockId=0x0000000E,1
 
 [Docking][Data]
-DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=2,50 Size=1916,980 Split=Y
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,696 Split=Y
   DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,396 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1190,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
@@ -134,5 +134,5 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=2,50 Size=1916,980
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
       DockNode            ID=0x0000000B Parent=0x00000007 SizeRef=1606,218 Selected=0xB146F3E7
     DockNode              ID=0x0000000C Parent=0x0000000D SizeRef=418,876 Selected=0x55CB218D
-  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x8339927A
+  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x7091E70A
 
