--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1288,755
+Size=1608,935
 Collapsed=0
 
 [Window][Debug##Default]
@@ -118,7 +118,7 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=637,387 Size=1286,696 Split=Y
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=135,188 Size=1606,876 Split=Y
   DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,396 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1190,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
@@ -128,7 +128,7 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=637,387 Size=1286,
             DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1606,468 Split=Y
               DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1606,580 Split=X Selected=0x12C8CFB4
                 DockNode  ID=0x0000000F Parent=0x00000002 SizeRef=366,396 Selected=0x61A48ADD
-                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=498,396 CentralNode=1 Selected=0x12C8CFB4
+                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=498,396 CentralNode=1 Selected=0x582FBD90
               DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1606,294 Selected=0x9B88CA06
             DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=1606,406 Selected=0x1298F26D
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
