--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1928,1044
+Size=1288,755
 Collapsed=0
 
 [Window][Debug##Default]
@@ -62,32 +62,32 @@ Size=306,281
 Collapsed=0
 
 [Window][Object Viewer]
-Pos=1504,58
-Size=418,680
+Pos=869,58
+Size=418,356
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Project Directory]
-Pos=6,740
+Pos=6,764
 Size=1916,298
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Scene Content]
-Pos=6,58
-Size=365,680
+Pos=1,58
+Size=365,356
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Scene Viewer]
-Pos=373,58
-Size=1129,680
+Pos=368,58
+Size=499,356
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Select Project]
-Pos=1,58
-Size=1606,876
+Pos=287,133
+Size=806,576
 Collapsed=0
 DockId=0x00000010,0
 
@@ -112,14 +112,29 @@ Size=94,84
 Collapsed=0
 
 [Window][Input Manager]
-Pos=6,740
-Size=1916,298
+Pos=1,416
+Size=1286,338
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Content Browser]
+Pos=1,416
+Size=1286,338
 Collapsed=0
 DockId=0x0000000E,1
 
+[Window][Rename Folder]
+Pos=546,527
+Size=424,94
+Collapsed=0
+
+[Table][0xEEB6B38A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=2,50 Size=1916,980 Split=Y
-  DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,396 Split=X
+DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,696 Split=Y
+  DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,356 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1190,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
         DockNode          ID=0x00000008 Parent=0x0000000A SizeRef=370,876 Selected=0xEF0AF39E
@@ -134,5 +149,5 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=2,50 Size=1916,980
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
       DockNode            ID=0x0000000B Parent=0x00000007 SizeRef=1606,218 Selected=0xB146F3E7
     DockNode              ID=0x0000000C Parent=0x0000000D SizeRef=418,876 Selected=0x55CB218D
-  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,298 Selected=0x8339927A
+  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,338 Selected=0xBF096F38
 
