added get to object

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -86,7 +86,7 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Select Project]
-Pos=183,29
+Pos=79,-75
 Size=806,576
 Collapsed=0
 DockId=0x00000010,0
@@ -126,6 +126,12 @@ DockId=0x0000000E,1
 [Window][Rename Folder]
 Pos=546,527
 Size=424,94
+Collapsed=0
+
+[Window][Game Preview]
+ViewportPos=1209,585
+ViewportId=0x8EBB3147
+Size=496,310
 Collapsed=0
 
 [Table][0xEEB6B38A,2]
