added console logs read to gui

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -71,7 +71,7 @@ DockId=0x0000000C,0
 Pos=6,764
 Size=1916,298
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000011,0
 
 [Window][Scene Content]
 Pos=1,58
@@ -86,7 +86,7 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Select Project]
-Pos=79,-75
+Pos=157,3
 Size=806,576
 Collapsed=0
 DockId=0x00000010,0
@@ -113,15 +113,15 @@ Collapsed=0
 
 [Window][Input Manager]
 Pos=1,461
-Size=1286,293
+Size=858,293
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000011,0
 
 [Window][Content Browser]
 Pos=1,461
-Size=1286,293
+Size=858,293
 Collapsed=0
-DockId=0x0000000E,1
+DockId=0x00000011,1
 
 [Window][Rename Folder]
 Pos=546,527
@@ -133,6 +133,12 @@ ViewportPos=1209,585
 ViewportId=0x8EBB3147
 Size=496,310
 Collapsed=0
+
+[Window][Console]
+Pos=861,461
+Size=426,293
+Collapsed=0
+DockId=0x00000012,0
 
 [Table][0xEEB6B38A,2]
 Column 0  Weight=1.0000
@@ -155,5 +161,7 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
       DockNode            ID=0x0000000B Parent=0x00000007 SizeRef=1606,218 Selected=0xB146F3E7
     DockNode              ID=0x0000000C Parent=0x0000000D SizeRef=418,876 Selected=0x55CB218D
-  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,293 Selected=0xBF096F38
+  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,293 Split=X Selected=0x7091E70A
+    DockNode              ID=0x00000011 Parent=0x0000000E SizeRef=858,293 Selected=0x7091E70A
+    DockNode              ID=0x00000012 Parent=0x0000000E SizeRef=426,293 Selected=0x49278EEE
 
