added camera control logic with darkness

--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -63,7 +63,7 @@ Collapsed=0
 
 [Window][Object Viewer]
 Pos=869,58
-Size=418,401
+Size=418,402
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -75,18 +75,18 @@ DockId=0x00000011,0
 
 [Window][Scene Content]
 Pos=1,58
-Size=365,401
+Size=370,402
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Scene Viewer]
-Pos=368,58
-Size=499,401
+Pos=373,58
+Size=494,402
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Select Project]
-Pos=157,3
+Pos=287,133
 Size=806,576
 Collapsed=0
 DockId=0x00000010,0
@@ -112,14 +112,14 @@ Size=94,84
 Collapsed=0
 
 [Window][Input Manager]
-Pos=1,461
-Size=858,293
+Pos=1,462
+Size=858,292
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Content Browser]
-Pos=1,461
-Size=858,293
+Pos=1,462
+Size=858,292
 Collapsed=0
 DockId=0x00000011,1
 
@@ -135,8 +135,8 @@ Size=496,310
 Collapsed=0
 
 [Window][Console]
-Pos=861,461
-Size=426,293
+Pos=861,462
+Size=426,292
 Collapsed=0
 DockId=0x00000012,0
 
@@ -146,7 +146,7 @@ Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,696 Split=Y
-  DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,401 Split=X
+  DockNode                ID=0x0000000D Parent=0xCDC34B94 SizeRef=1606,402 Split=X
     DockNode              ID=0x00000007 Parent=0x0000000D SizeRef=1190,876 Split=Y
       DockNode            ID=0x0000000A Parent=0x00000007 SizeRef=1606,656 Split=X
         DockNode          ID=0x00000008 Parent=0x0000000A SizeRef=370,876 Selected=0xEF0AF39E
@@ -154,14 +154,14 @@ DockSpace                 ID=0xCDC34B94 Window=0x41896AB8 Pos=317,207 Size=1286,
           DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=800,876 Split=Y
             DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1606,468 Split=Y
               DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1606,580 Split=X Selected=0x12C8CFB4
-                DockNode  ID=0x0000000F Parent=0x00000002 SizeRef=365,396 Selected=0x61A48ADD
-                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=499,396 CentralNode=1 Selected=0x12C8CFB4
+                DockNode  ID=0x0000000F Parent=0x00000002 SizeRef=370,396 Selected=0x61A48ADD
+                DockNode  ID=0x00000010 Parent=0x00000002 SizeRef=1124,396 CentralNode=1 Selected=0x12C8CFB4
               DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1606,294 Selected=0x9B88CA06
             DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=1606,406 Selected=0x1298F26D
           DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=432,876 Selected=0x7C31F919
       DockNode            ID=0x0000000B Parent=0x00000007 SizeRef=1606,218 Selected=0xB146F3E7
     DockNode              ID=0x0000000C Parent=0x0000000D SizeRef=418,876 Selected=0x55CB218D
-  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,293 Split=X Selected=0x7091E70A
-    DockNode              ID=0x00000011 Parent=0x0000000E SizeRef=858,293 Selected=0x7091E70A
+  DockNode                ID=0x0000000E Parent=0xCDC34B94 SizeRef=1606,292 Split=X Selected=0x7091E70A
+    DockNode              ID=0x00000011 Parent=0x0000000E SizeRef=858,293 Selected=0xBF096F38
     DockNode              ID=0x00000012 Parent=0x0000000E SizeRef=426,293 Selected=0x49278EEE
 
