--- a/SceneEditor/imgui.ini
+++ b/SceneEditor/imgui.ini
@@ -86,13 +86,14 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Select Project]
-Pos=183,29
+Pos=287,133
 Size=806,576
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Create New Project]
-Pos=507,216
+ViewportPos=641,394
+ViewportId=0x644D7B11
 Size=400,160
 Collapsed=0
 
@@ -103,7 +104,7 @@ Collapsed=0
 
 [Window][Create New Class]
 Pos=677,357
-Size=340,148
+Size=336,120
 Collapsed=0
 
 [Window][Create New Instance]
